CSS : design system

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Yummy Nouilles - Accueil</title>
     <link rel="icon" type="image/svg+xml" href="assets/logo_xl.svg">
-    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
