--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Yummy Nouilles - Accueil</title>
     <link rel="icon" type="image/svg+xml" href="assets/logo_xl.svg">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header>
-        <img src="assets/logo_xl.svg" alt="Logo Yummy Nouilles" class="logo">
-        <nav>
-            <a href="index.html">Accueil</a>
-            <a href="menu.html">Menu</a>
-            <a href="contact.html">Contact</a>
+    <header class="appBar">
+        <img src="assets/logo_xl.svg" alt="Logo Yummy Nouilles" class="appBar__icon">
+        <nav class="appBar__nav">
+            <a class="appBar__nav-item active" href="index.html">Accueil</a>
+            <a class="appBar__nav-item" href="menu.html">Menu</a>
+            <a class="appBar__nav-item" href="contact.html">Contact</a>
         </nav>
     </header>
 <main>
