--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="adresses__bloc-item">
                 <img src="assets/img/restaurant/facade_yummy_nouille_1_1_20.jpg" alt="Restaurant Yummy Noodle">
                 <p>
-                    <strong>Yummy Noodle</strong><br>
+                    <strong class="adresses__bloc-item--title">Yummy Noodle</strong><br>
                     185 rue du Lancry<br>
                     75010 Paris
                 </p>
@@ -38,7 +38,7 @@
             <div class="adresses__bloc-item">
                 <img src="assets/img/restaurant/facade_yummy_nouille_1_1_20.jpg" alt="Restaurant Yummy Noodle">
                 <p>
-                    <strong>Yummy Noodle</strong><br>
+                    <strong class="adresses__bloc-item--title">Yummy Noodle</strong><br>
                     185 rue du Lancry<br>
                     75010 Paris
                 </p>
@@ -46,7 +46,7 @@
             <div class="adresses__bloc-item">
                 <img src="assets/img/restaurant/facade_yummy_nouille_1_1_20.jpg" alt="Restaurant Yummy Noodle">
                 <p>
-                    <strong>Yummy Noodle</strong><br>
+                    <strong class="adresses__bloc-item--title">Yummy Noodle</strong><br>
                     185 rue du Lancry<br>
                     75010 Paris
                 </p>
